--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "chi-simple-bar-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -45,5 +44,20 @@
         }
       ]
     }
-  }
+  },
+  "dependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.12.0",
+    "babel-preset-es2015": "^6.14.0",
+    "xo": "^0.16.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hypercubed/chi-simple-bar-demo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Hypercubed/chi-simple-bar-demo/issues"
+  },
+  "homepage": "https://github.com/Hypercubed/chi-simple-bar-demo#readme",
+  "description": ""
 }
